{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "a6b10bd8-9abe-4f3d-bf7a-f07fd1a79c09",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b974b123-c681-4864-a6e3-3b7a1c126a67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeCharacter",
                    "type": "Button",
                    "id": "7fb81ce5-909e-4a82-9036-6d4435e31ba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CharacterSpeak",
                    "type": "Button",
                    "id": "e95a1900-d4de-466a-b549-13d9fdba2cc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CharacterInteract",
                    "type": "Button",
                    "id": "51ba967a-b12a-49c9-8867-d0347d1c83a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e47ee493-ffe9-4b88-9c3b-c81bb2f57471",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7766cbbf-f3a7-47d7-9ae8-92a6817a6046",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "95aa53e5-8aae-482e-83d0-2cfc60d2d445",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c21d1c81-9f1e-48ce-8ad3-2f30d02e3454",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "51aca664-d1a3-4d1e-9282-02fa9ff5780b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c3882646-d6f2-452f-a10d-cd1a84504a99",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "049aa39f-0d43-401e-9924-f62b53452669",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterSpeak",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1402188-3de9-4ebb-9061-289bfdb18bb4",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "8ac8d74c-5102-4d4e-aaf5-555517401d4c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "7d1b1cca-9630-4b69-8aed-8a9aeb717d94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b005346-dd84-4121-9d7b-2a2b13dc1ff9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}